[package]
name = "apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["bevy_render"], optional = true }
glam = { version= "0.25.0", features = ["bytemuck"] }
petgraph = { version = "0.6.5", features = ["stable_graph"], optional = true }

[features]
default = ["map"]
bevy = ["dep:bevy"]
map = ["dep:petgraph"]
